--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,12 @@
             <version>42.6.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+
     </dependencies>
 
 
