--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
             <version>1.1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp-urlconnection</artifactId>
+            <version>5.0.0-alpha.11</version>
+        </dependency>
+
     </dependencies>
 
 
